@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix issue where legacy config was overriden by default config (#1489288)
 - Add temp_dir_ttl configuration option (#1489304)
 - Fix newmail_notifier issue where favicon wasn't changed back to default (#1489313)
 - Allow setting INBOX as Sent folder (#1489219)
